<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainScreenFragment"
    android:background="@color/backgroundColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="82dp"
            android:layout_height="71dp"
            android:src="@drawable/ic_logo"
            android:layout_gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/titleStyle"
            android:text="@string/categoria_em_exibicao"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvNowPlaying"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_top" />

        <TextView
            style="@style/titleStyle"
            android:text="@string/categoria_em_breve"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvUpComing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_top" />

        <TextView
            style="@style/titleStyle"
            android:text="@string/categoria_mais_popular"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPopular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_top" />

        <TextView
            style="@style/titleStyle"
            android:text="@string/categoria_melhores_avaliados"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTopRated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginBottom="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_top" />
    </LinearLayout>
</ScrollView>